<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b&gt;facebook.com/device&lt;/b&gt; on your smartphone or computer and enter this code</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_tooltip_default">New! You\'re in control - choose what info you want to share with apps.</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="place_autocomplete_clear_button">Clear search</string>
    <string name="place_autocomplete_search_hint">Search</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="Device_Alarm_CTA_Add_Alarm">Add Alarm</string>
    <string name="Device_Alarm_Edit_CTA_CANCEL">CANCEL</string>
    <string name="Device_Alarm_Edit_CTA_SAVE">SAVE</string>
    <string name="Device_Alarm_Edit_Input_Enter_Alarm_Name">Enter Alarm Name</string>
    <string name="Device_Alarm_Edit_Title_EDIT_ALARM">EDIT ALARM</string>
    <string name="Device_Alarm_Empty_CTA_Add_Alarm">ADD ALARM</string>
    <string name="Device_Alarm_Empty_Title_Alarm">ALARM</string>
    <string name="Device_Alarm_Header_Alarms">Alarms</string>
    <string name="Device_Alarm_Label_F">F</string>
    <string name="Device_Alarm_Label_M">M</string>
    <string name="Device_Alarm_Label_S">S</string>
    <string name="Device_Alarm_Label_S_1">S</string>
    <string name="Device_Alarm_Label_T">T</string>
    <string name="Device_Alarm_Label_T_1">T</string>
    <string name="Device_Alarm_Label_W">W</string>
    <string name="Device_Alarm_Text_AM">AM</string>
    <string name="Device_Alarm_Text_PM">PM</string>
    <string name="Device_Battery_CTA_Replace_Battery">REPLACE BATTERY</string>
    <string name="Device_Battery_Low_CTA_INSTRUCTIONS">INSTRUCTIONS</string>
    <string name="Device_Battery_Low_CTA_SHOP">SHOP</string>
    <string name="Device_Battery_Low_Label_Need_Help">Need Help?</string>
    <string name="Device_Battery_Low_Label_Purchase_A_Battery">Purchase New Battery</string>
    <string name="Device_Battery_Low_Text_Find_a_coin_or_tool">Find a coin or tool provided with your device when purchased to assist in changing the battery.</string>
    <string name="Device_Battery_Low_Text_Watches_purchased_within_1_year">Watches purchased within 1 year are eligible to have their batteries replaced in-store.</string>
    <string name="Device_Battery_Low_Text_When_your_battery_is_low">When your battery is low, the hands on your watch will move to the 6 o’clock position. To dismiss, press any button on the watch.</string>
    <string name="Device_Battery_Low_Title_Your_Watch_Battery_Is_Low">Your Watch Battery Is Low</string>
    <string name="Device_Battery_Text_Your_battery_is_below_25">Your battery is below 25%. Replace the battery using a tool or coin.</string>
    <string name="Device_Calibration_Hour_Text_Put_your_watch_close_to">Put your watch close to your phone. Use the arrow buttons below to align the hour hand to twelve.</string>
    <string name="Device_Calibration_Minute_Text_Put_your_watch_close_to">Put your watch close to your phone. Use the arrow buttons below to align the minute hand to twelve.</string>
    <string name="Device_Calibration_Next_CTA_OK">OK</string>
    <string name="Device_Calibration_Next_Text_The_watch_will_continue_to">The watch will continue to tell time in last synced time zone if disconnected.</string>
    <string name="Device_Calibration_Next_Text_When_connected_the_time_on">The time on your watch will automatically match your phone when connected.</string>
    <string name="Device_Calibration_Next_Title_Calibration_Complete">CALIBRATION COMPLETE</string>
    <string name="General_Weekdays_Weekday_Initial_F">F</string>
    <string name="General_Weekdays_Weekday_Initial_M">M</string>
    <string name="General_Weekdays_Weekday_Initial_S">S</string>
    <string name="General_Weekdays_Weekday_Initial_S_1">S</string>
    <string name="General_Weekdays_Weekday_Initial_T">T</string>
    <string name="General_Weekdays_Weekday_Initial_T_1">T</string>
    <string name="General_Weekdays_Weekday_Initial_W">W</string>
    <string name="Notifications_Choose_CTA_NEXT">Next</string>
    <string name="Notifications_Contacts_CTA_SAVE">Save</string>
    <string name="Notifications_Preview_Reassign_Text_Choose_a_Number">Choose a Number</string>
    <string name="Onboarding_Account_Forgot_CTA_SUBMIT">Submit</string>
    <string name="Onboarding_Account_Forgot_Text_Enter_your_account_email_and">If you signed up with an email address, enter the account email and we will send you a link to reset your password. Remember to check the spam folder if you don’t see it in your inbox! If you signed up using a social network, use the \"log in with…\" options on the sign in screen.</string>
    <string name="Onboarding_Account_Forgot_Title_FORGOT_PASSWORD">RESET PASSWORD</string>
    <string name="Onboarding_Account_Signup_Email_Input_Birthday">Birthday</string>
    <string name="Onboarding_Account_Signup_Email_Input_Email">Email</string>
    <string name="Onboarding_Account_Signup_Email_Input_First_Name">First Name</string>
    <string name="Onboarding_Account_Signup_Email_Input_Last_Name">Last Name</string>
    <string name="Onboarding_Account_Signup_Email_Label_Female">Female</string>
    <string name="Onboarding_Account_Signup_Email_Label_Male">Male</string>
    <string name="Onboarding_Account_Signup_Email_Label_Other">Other</string>
    <string name="Onboarding_Pair_Reset_CTA_OPEN_BRAND">OPEN %s</string>
    <string name="Onboarding_Pair_Reset_Header_STEP_1">STEP 1</string>
    <string name="Onboarding_Pair_Reset_Header_STEP_2">STEP 2</string>
    <string name="Onboarding_Pair_Reset_Header_STEP_3">STEP 3</string>
    <string name="Onboarding_Pair_Reset_Text_Go_to_your_Bluetooth_settings">Go to your Bluetooth settings. If you see your watch, remove it from your list of paired devices.</string>
    <string name="Onboarding_Pair_Reset_Text_Stick_something_like_a_paperclip">Stick something like a paperclip or an earring in the hole on the back of your device for precisely eight seconds.</string>
    <string name="Onboarding_Pair_Reset_Text_Tap_the_button_below_to">Tap the button below to download or open the %s app on your phone. Log in and pair this device in My Devices.</string>
    <string name="Onboarding_Pair_Reset_Title_WE_NEED_TO_RESET">WE NEED TO RESET</string>
    <string name="Onboarding_Pair_Start_CTA_START_PAIRING">START PAIRING</string>
    <string name="Onboarding_Pair_Start_Text_Press_and_hold_the_middle">Press and hold any button with your watch close to phone. When the watch vibrates 3 times and hands animate, it is ready to pair.</string>
    <string name="Onboarding_Pair_Start_Title_PAIR_YOUR_HYBRID_SMARTWATCH">Pair Your Hybrid Smartwatch</string>
    <string name="Onboarding_Welcome_CTA_Continue_Without_Watch">Continue Without Watch</string>
    <string name="Profile_Edit__Text_Change_Profile_Picture">Change Profile Picture</string>
    <string name="Profile_Edit__Title_EDIT_PROFILE">EDIT PROFILE</string>
    <string name="Stats_Activity_Info_Height_Title_Height">Height</string>
    <string name="Stats_Activity_Info_Weight_Title_Weight">Weight</string>
    <string name="Stats_BC_Quit_CTA_CANCEL">CANCEL</string>
    <string name="Stats_BC_Quit_CTA_OK">OK</string>
    <string name="Stats_BC_Quit_Text_Are_you_sure_you_want">Are you sure you want to quit this challenge?</string>
    <string name="Stats_BC_Quit_Title_CONFIRM">CONFIRM</string>
    <string name="font_path_scout_regular_10">fonts/Fossil_Scout-Regular_10.otf</string>
</resources>