<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent"
    <LinearLayout android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:orientation="horizontal" android:id="@id/calendar_header" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/activity_vertical_margin_small">
        <com.portfolio.platform.view.FlexibleTextView android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="wrap_content" android:text="@string/General_Weekdays_Weekday_Initial_S" android:layout_weight="1.0" android:textAllCaps="true" style="@style/Calendar.Text.Toolbar" />
        <com.portfolio.platform.view.FlexibleTextView android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="wrap_content" android:text="@string/General_Weekdays_Weekday_Initial_M" android:layout_weight="1.0" android:textAllCaps="true" style="@style/Calendar.Text.Toolbar" />
        <com.portfolio.platform.view.FlexibleTextView android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="wrap_content" android:text="@string/General_Weekdays_Weekday_Initial_T" android:layout_weight="1.0" android:textAllCaps="true" style="@style/Calendar.Text.Toolbar" />
        <com.portfolio.platform.view.FlexibleTextView android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="wrap_content" android:text="@string/General_Weekdays_Weekday_Initial_W" android:layout_weight="1.0" android:textAllCaps="true" style="@style/Calendar.Text.Toolbar" />
        <com.portfolio.platform.view.FlexibleTextView android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="wrap_content" android:text="@string/General_Weekdays_Weekday_Initial_T_1" android:layout_weight="1.0" android:textAllCaps="true" style="@style/Calendar.Text.Toolbar" />
        <com.portfolio.platform.view.FlexibleTextView android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="wrap_content" android:text="@string/General_Weekdays_Weekday_Initial_F" android:layout_weight="1.0" android:textAllCaps="true" style="@style/Calendar.Text.Toolbar" />
        <com.portfolio.platform.view.FlexibleTextView android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="wrap_content" android:text="@string/General_Weekdays_Weekday_Initial_S_1" android:layout_weight="1.0" android:textAllCaps="true" style="@style/Calendar.Text.Toolbar" />
    </LinearLayout>
    <GridView android:id="@id/grid" android:scrollbars="UNKNOWN_DATA_0x0" android:layout_width="match_parent" android:layout_height="wrap_content" android:numColumns="UNKNOWN_DATA_0x7" android:overScrollMode="never" />
</LinearLayout>
