<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res-auto" app:orientation="vertical" app:background="@drawable/fs_background" app:layout_width="match_parent" app:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout app:id="@id/customToolbar" app:background="@color/fossilBeige" app:fitsSystemWindows="true" app:layout_width="match_parent" app:layout_height="wrap_content">
        <ImageView app:id="@id/left_icon" app:layout_width="UNKNOWN_DATA_0x10102eb" app:layout_height="UNKNOWN_DATA_0x10102eb" app:src="@drawable/ic_back_dark" app:scaleType="centerInside" app:layout_constraintStart_toStartOf="0" />
        <com.portfolio.platform.view.FlexibleTextView app:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@id/save" app:layout_width="wrap_content" app:layout_height="UNKNOWN_DATA_0x10102eb" app:text="@string/Notifications_Contacts_CTA_SAVE" app:singleLine="true" app:textAllCaps="true" app:layout_marginEnd="@dimen/dp10" app:layout_constraintEnd_toEndOf="0" style="@style/ScoutBold.18.Charcoal" />
    </android.support.constraint.ConstraintLayout>
    <ScrollView app:layout_width="match_parent" app:layout_height="match_parent" app:overScrollMode="never">
        <LinearLayout app:orientation="vertical" app:layout_width="match_parent" app:layout_height="wrap_content" app:paddingStart="@dimen/screen_padding_start" app:paddingEnd="@dimen/screen_padding_start">
            <com.portfolio.platform.view.FlexibleTextView app:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:paddingTop="@dimen/dp10" app:paddingBottom="@dimen/dp10" app:layout_width="match_parent" app:layout_height="wrap_content" app:layout_marginTop="@dimen/dp20" app:text="@string/Profile_Edit__Title_EDIT_PROFILE" app:textAllCaps="true" style="@style/H3.3E3935" />
            <android.support.constraint.ConstraintLayout app:background="@c2076a/white" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x7f0a008d">
                <com.portfolio.platform.view.FossilCircleImageView app:id="@id/avatar" app:layout_width="UNKNOWN_DATA_0x7f0a007c" app:layout_height="UNKNOWN_DATA_0x7f0a007c" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.1" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" />
                <com.portfolio.platform.view.FlexibleTextView app:layout_width="wrap_content" app:layout_height="wrap_content" app:text="@string/Profile_Edit__Text_Change_Profile_Picture" app:paddingStart="@dimen/screen_padding_start" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintStart_toEndOf="@id/avatar" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.5" style="@style/Small.Charcoal" />
            </android.support.constraint.ConstraintLayout>
            <com.portfolio.platform.view.FlexibleEditText app:id="@id/edit_first_name" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x7f0a0167" app:layout_marginTop="@dimen/dp20" app:hint="@string/Onboarding_Account_Signup_Email_Input_First_Name" app:textDirection="locale" app:textAlignment="viewStart" style="@style/EditText.Fossil" />
            <com.portfolio.platform.view.FlexibleEditText app:id="@id/edit_last_name" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x7f0a0167" app:layout_marginTop="@dimen/dp20" app:hint="@string/Onboarding_Account_Signup_Email_Input_Last_Name" app:textDirection="locale" app:textAlignment="viewStart" style="@style/EditText.Fossil" />
            <com.portfolio.platform.view.FlexibleEditText app:enabled="false" app:id="@id/edit_email" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x7f0a0167" app:layout_marginTop="@dimen/dp20" app:hint="@string/Onboarding_Account_Signup_Email_Input_Email" app:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone|time" app:textDirection="locale" app:textAlignment="viewStart" style="@style/EditText.Fossil" />
            <com.portfolio.platform.view.FlexibleEditText app:id="@id/edit_height" app:focusable="false" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x7f0a0167" app:layout_marginTop="@dimen/dp20" app:hint="@string/Stats_Activity_Info_Height_Title_Height" style="@style/EditText.Fossil" />
            <com.portfolio.platform.view.FlexibleEditText app:id="@id/edit_weight" app:focusable="false" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x7f0a0167" app:layout_marginTop="@dimen/dp20" app:hint="@string/Stats_Activity_Info_Weight_Title_Weight" style="@style/EditText.Fossil" />
            <com.portfolio.platform.view.FlexibleEditText app:enabled="false" app:id="@id/edit_dob" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x7f0a0167" app:layout_marginTop="@dimen/dp20" app:hint="@string/Onboarding_Account_Signup_Email_Input_Birthday" app:textDirection="locale" app:textAlignment="viewStart" style="@style/EditText.Fossil" />
            <android.support.constraint.ConstraintLayout app:layout_width="match_parent" app:layout_height="wrap_content" app:layout_marginTop="@dimen/dp20" app:layout_marginBottom="@dimen/dp20">
                <com.portfolio.platform.view.FlexibleButton app:textColor="@color/neutrals_gray" app:id="@id/fb_male" app:background="@drawable/background_white_border" app:layout_width="UNKNOWN_DATA_0x1" app:layout_height="UNKNOWN_DATA_0x7f0a0167" app:layout_marginTop="@dimen/dp20" app:text="@string/Onboarding_Account_Signup_Email_Label_Male" app:textAllCaps="false" app:layout_marginEnd="@dimen/dp10" app:layout_constraintEnd_toStartOf="@id/fb_female" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:buttonTextType="3" style="@style/Button.Gender" />
                <com.portfolio.platform.view.FlexibleButton app:textColor="@color/neutrals_gray" app:id="@id/fb_female" app:background="@drawable/background_white_border" app:layout_width="UNKNOWN_DATA_0x1" app:layout_height="UNKNOWN_DATA_0x7f0a0167" app:layout_marginTop="@dimen/dp20" app:text="@string/Onboarding_Account_Signup_Email_Label_Female" app:textAllCaps="false" app:layout_marginEnd="@dimen/dp10" app:layout_constraintEnd_toStartOf="@id/fb_other" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toEndOf="@id/fb_male" app:layout_constraintTop_toTopOf="0" app:buttonTextType="3" style="@style/Button.Gender" />
                <com.portfolio.platform.view.FlexibleButton app:textColor="@color/neutrals_gray" app:id="@id/fb_other" app:background="@drawable/background_white_border" app:layout_width="UNKNOWN_DATA_0x1" app:layout_height="UNKNOWN_DATA_0x7f0a0167" app:layout_marginTop="@dimen/dp20" app:text="@string/Onboarding_Account_Signup_Email_Label_Other" app:textAllCaps="false" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toEndOf="@id/fb_female" app:layout_constraintTop_toTopOf="0" app:buttonTextType="3" style="@style/Button.Gender" />
            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
