<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res-auto" app:layout_width="match_parent" app:layout_height="match_parent">
    <ImageView app:id="@id/iv_base_background" app:layout_width="match_parent" app:layout_height="match_parent" app:scaleType="fitXY" />
    <com.portfolio.platform.view.FlexibleTextView app:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@id/ftv_title" app:layout_width="match_parent" app:layout_height="wrap_content" app:layout_marginTop="?unknown_attr_ref: 10102eb" app:text="@string/Onboarding_Pair_Start_Title_PAIR_YOUR_HYBRID_SMARTWATCH" app:layout_alignParentTop="true" app:textAllCaps="true" style="@style/H2.Charcoal" />
    <com.portfolio.platform.view.FlexibleTextView app:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@id/ftv_desc" app:layout_width="match_parent" app:layout_height="wrap_content" app:layout_margin="@dimen/dp20" app:text="@string/Onboarding_Pair_Start_Text_Press_and_hold_the_middle" app:layout_below="@id/ftv_title" style="@style/Body.CoolGray" />
    <com.portfolio.platform.view.UnderlinedTextView app:id="@id/ftv_continue_without_watch" app:layout_width="wrap_content" app:layout_height="UNKNOWN_DATA_0x7f0a005e" app:layout_marginTop="@dimen/screen_padding_start" app:layout_marginBottom="@dimen/screen_padding_bottom" app:text="@string/Onboarding_Welcome_CTA_Continue_Without_Watch" app:layout_alignParentBottom="true" app:layout_centerInParent="true" app:underlineDistance="@dimen/dp8" app:underlineColor="@color/fossilCharcoal" style="@style/UnderlineText" />
    <com.portfolio.platform.view.FlexibleButton app:id="@id/fb_next" app:layout_width="match_parent" app:layout_height="wrap_content" app:text="@string/Onboarding_Pair_Start_CTA_START_PAIRING" app:layout_above="@id/ftv_continue_without_watch" style="@style/Button.Scarlett" />
</RelativeLayout>
