<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@c2076a/white" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:id="@id/iv_base_background" android:layout_width="match_parent" android:layout_height="match_parent" android:scaleType="fitXY" />
    <RelativeLayout android:fitsSystemWindows="true" android:layout_width="match_parent" android:layout_height="match_parent">
        <ImageView android:id="@id/iv_back" android:layout_width="UNKNOWN_DATA_0x10102eb" android:layout_height="UNKNOWN_DATA_0x10102eb" android:src="@drawable/ic_back_dark" android:scaleType="center" android:layout_alignParentTop="true" />
        <com.portfolio.platform.view.FlexibleTextView android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/ftv_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/typography_padding_header_bottom" android:text="@string/Onboarding_Pair_Reset_Title_WE_NEED_TO_RESET" android:layout_below="@id/iv_back" style="@style/H2.Charcoal" />
        <ScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:layout_above="@id/fb_open_fossilq" android:layout_below="@id/ftv_title">
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                <com.portfolio.platform.view.FlexibleTextView android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/step_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/screen_padding_bottom" android:text="@string/Onboarding_Pair_Reset_Header_STEP_1" style="@style/H3" />
                <com.portfolio.platform.view.FlexibleTextView android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/step_1_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Onboarding_Pair_Reset_Text_Stick_something_like_a_paperclip" android:paddingStart="@dimen/screen_padding_start" android:paddingEnd="@dimen/screen_padding_end" style="@style/Body.CoolGray" />
                <ImageView android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/iv_reset" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/screen_padding_start" android:layout_marginBottom="@dimen/screen_padding_start" android:src="@drawable/background_reset_legacy" />
                <com.portfolio.platform.view.FlexibleTextView android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/step_2" android:paddingTop="@dimen/screen_padding_start" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/screen_padding_bottom" android:text="@string/Onboarding_Pair_Reset_Header_STEP_2" style="@style/H3" />
                <com.portfolio.platform.view.FlexibleTextView android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/step_2_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Onboarding_Pair_Reset_Text_Go_to_your_Bluetooth_settings" android:paddingStart="@dimen/screen_padding_start" android:paddingEnd="@dimen/screen_padding_end" style="@style/Body.CoolGray" />
                <com.portfolio.platform.view.FlexibleTextView android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/step_3" android:paddingTop="@dimen/screen_padding_start" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/screen_padding_bottom" android:text="@string/Onboarding_Pair_Reset_Header_STEP_3" style="@style/H3" />
                <com.portfolio.platform.view.FlexibleTextView android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/step_3_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Onboarding_Pair_Reset_Text_Tap_the_button_below_to" android:paddingStart="@dimen/screen_padding_start" android:paddingEnd="@dimen/screen_padding_end" style="@style/Body.CoolGray" />
            </LinearLayout>
        </ScrollView>
        <com.portfolio.platform.view.FlexibleButton android:id="@id/fb_open_fossilq" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/screen_padding_bottom" android:text="@string/Onboarding_Pair_Reset_CTA_OPEN_BRAND" android:layout_alignParentBottom="true" style="@style/Button.Scarlett" />
    </RelativeLayout>
</RelativeLayout>
