<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginStart="@dimen/screen_padding_end" android:layout_marginEnd="@dimen/screen_padding_start">
    <com.portfolio.platform.view.FlexibleTextView android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:paddingTop="@dimen/screen_padding_start" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/typography_padding_header_bottom" android:text="@string/Onboarding_Account_Forgot_Title_FORGOT_PASSWORD" android:textAllCaps="true" style="@style/H2.Charcoal" />
    <com.portfolio.platform.view.FlexibleTextView android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/typography_padding_header_bottom" android:text="@string/Onboarding_Account_Forgot_Text_Enter_your_account_email_and" android:paddingStart="@dimen/screen_padding_start" android:paddingEnd="@dimen/screen_padding_end" style="@style/Body.CoolGray" />
    <com.portfolio.platform.view.FlexibleEditText android:id="@id/fet_email" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a0167" android:hint="@string/Onboarding_Account_Signup_Email_Input_Email" style="@style/EditText.Fossil" />
    <com.portfolio.platform.view.FlexibleButton android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/fb_submit" android:layout_width="UNKNOWN_DATA_0x7f0a004b" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp50" android:text="@string/Onboarding_Account_Forgot_CTA_SUBMIT" style="@style/Button.Scarlett" />
</LinearLayout>
