<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res-auto" app:background="@c2076a/white" app:layout_width="match_parent" app:layout_height="wrap_content">
    <com.portfolio.platform.view.FlexibleTextView app:id="@id/title" app:layout_width="wrap_content" app:layout_height="wrap_content" app:layout_marginTop="@dimen/dp11" app:layout_marginBottom="@dimen/dp11" app:text="@string/Notifications_Preview_Reassign_Text_Choose_a_Number" app:layout_alignParentTop="true" app:layout_centerHorizontal="true" app:textAllCaps="true" style="@style/H3" />
    <ImageView app:id="@id/close_picker" app:padding="2dp" app:layout_width="UNKNOWN_DATA_0x7f0a0049" app:layout_height="UNKNOWN_DATA_0x7f0a0049" app:layout_marginTop="@dimen/dp10" app:src="@drawable/ic_close_dark" app:layout_marginEnd="@dimen/dp10" app:layout_alignParentEnd="true" />
    <com.portfolio.platform.view.ClockView app:id="@id/clock_picker" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x7f0a0054" app:layout_below="@id/title" app:cv_fontName="@string/font_path_scout_regular_10" app:cv_fontColor="@color/fossilCharcoal" />
    <com.portfolio.platform.view.FlexibleTextView app:id="@id/fb_next" app:padding="10dp" app:layout_width="wrap_content" app:layout_height="wrap_content" app:layout_marginBottom="@dimen/dp10" app:text="@string/Notifications_Choose_CTA_NEXT" app:layout_below="@id/clock_picker" app:layout_centerHorizontal="true" app:paddingStart="@dimen/dp40" app:paddingEnd="@dimen/dp40" style="@style/Button.Scarlett" />
</RelativeLayout>
